# TransportContractAnalyzer

./: .replit  Pasted--nombre-entidad-nit-entidad-departamento-ciudad-localizaci-n-orden-sector-1731357866453.txt  active_transport_contracts_20241110_142814.csv  config.json  data_processor.py  main.py  pyproject.toml  replit.nix  scheduler.py  secop.py  secop_ii_closed_20241111_202725.csv  secop_ii_closed_20241114_044504.csv  secop_ii_closed_20241115_202058.csv  secop_ii_open_20241111_202723.csv  secop_ii_open_20241114_044044.csv  secop_ii_open_20241115_202056.csv  secop_ii_transport_presentation_phase_20241110_142812.csv  styles.py  utils.py  visualizations.py
.streamlit/: config.toml
assets/: style.css
components/: analytics.py  auth.py  chat.py  config.py  filters.py  reports.py  tables.py
utils/: data_processor.py  format_helpers.py  notifications.py  scheduler.py
