[project]
name = "repl-nix-transportcontractanalyzer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "requests>=2.32.3",
    "streamlit>=1.40.0",
    "trafilatura>=1.12.2",
]
