[project]
name = "repl-nix-transportcontractanalyzer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "bcrypt>=4.2.0",
    "extra-streamlit-components>=0.1.71",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pyjwt>=2.9.0",
    "requests>=2.32.3",
    "streamlit>=1.40.0",
    "trafilatura>=1.12.2",
]
