[project]
name = "repl-nix-transportcontractanalyzer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "bcrypt>=4.2.0",
    "extra-streamlit-components>=0.1.71",
    "numpy",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.9.0",
    "reportlab>=4.2.5",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "secure-smtplib>=0.1.1",
    "sklearn",
    "streamlit-authenticator>=0.4.1",
    "streamlit>=1.40.0",
    "trafilatura>=1.12.2",
    "xlsxwriter>=3.2.0",
]
